# grifter

./: LICENSE.txt  README.md  pyproject.toml
grifter/: __main__.py  grifter.py  transformer.py
grifter/utils/: gif.py
transformer/: __main__.py
