[tool.poetry]
name = "gif-transformer"
version = "0.1.0"
description = ""
authors = ["Justin Chadwell <me@jedevc.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.2.0"
face-recognition = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
